added functional parameters

--- a/configs/qap_config_ds003.yml
+++ b/configs/qap_config_ds003.yml
@@ -8,6 +8,12 @@ working_directory: /tmp/workdir
 
 write_all_outputs: False
 
-template_brain_for_anat: /usr/share/fsl/5.0/data/standard/MNI152_T1_2mm_brain.nii.gz
+template_brain_for_anat: /usr/local/fsl/data/standard/MNI152_T1_2mm_brain.nii.gz
 
-template_skull_for_anat: /usr/share/fsl/5.0/data/standard/MNI152_T1_2mm.nii.gz
+template_skull_for_anat: /usr/local/fsl/data/standard/MNI152_T1_2mm.nii.gz
+
+start_idx: 0
+
+stop_idx: None
+
+slice_timing_correction: False
