--- a/circle.yml
+++ b/circle.yml
@@ -2,23 +2,22 @@ dependencies:
   cache_directories:
     - "~/examples/"
     - "~/afni/"
+    - "~/fsl/"
   override:
     - pip install --upgrade pip
     - pip install numpy
     - pip install http://github.com/chrisfilo/nipype/archive/fix/skullstrip_redirect_x.zip
     - pip install -e .
     - pip install matplotlib sphinx ipython
+    - if [[ ! -d ~/fsl ]]; then wget "http://fsl.fmrib.ox.ac.uk/fsldownloads/fsl-5.0.9-centos6_64.tar.gz"; tar zxvf fsl-5.0.9-centos6_64.tar.gz; fi
     - if [[ ! -d ~/afni ]]; then wget "http://afni.nimh.nih.gov/pub/dist/tgz/linux_openmp_64.tgz"; tar zxvf linux_openmp_64.tgz; mv linux_openmp_64 ~/afni; fi
     - if [[ ! -d ~/examples/ds003_downsampled ]]; then wget "https://googledrive.com/host/0B2JWN60ZLkgkMEw4bW5VUUpSdFU/ds003_downsampled.tar"; mkdir -p ~/examples; tar xvf ds003_downsampled.tar -C ~/examples; fi
-    - wget -O- http://neuro.debian.net/lists/precise.us-ca.full | sudo tee /etc/apt/sources.list.d/neurodebian.sources.list
-    - sudo apt-key adv --recv-keys --keyserver hkp://pgp.mit.edu:80 0xA5D32F012649A5A9
-    - sudo apt-get update -y; sudo apt-get install -y fsl-core fsl-atlases xvfb tcsh libxp6 xfonts-base python-qt4 r-base-dev libmotif4 libmotif-dev motif-clients gsl-bin netpbm libjpeg62
 test:
   override:
     - echo "01" > inclusion_file && python scripts/qap_bids_data_sublist_generator.py --include inclusion_file ~/examples/ds003_downsampled/ ~/bids_subject_list.yml
-    - . /etc/fsl/fsl.sh && PATH=~/afni:$PATH python scripts/qap_anatomical_spatial.py --sublist ~/bids_subject_list.yml configs/qap_config_ds003.yml
-    - . /etc/fsl/fsl.sh && PATH=~/afni:$PATH python scripts/qap_functional_spatial.py --sublist ~/bids_subject_list.yml configs/qap_config_ds003.yml
-    - . /etc/fsl/fsl.sh && PATH=~/afni:$PATH python scripts/qap_functional_temporal.py --sublist ~/bids_subject_list.yml configs/qap_config_ds003.yml
+    - FSLDIR=~/fsl/ PATH=~/afni:~/fsl/bin:$PATH LD_LIBRARY_PATH=~/fsl/lib python scripts/qap_anatomical_spatial.py --sublist ~/bids_subject_list.yml configs/qap_config_ds003.yml
+    - FSLDIR=~/fsl/ PATH=~/afni:~/fsl/bin:$PATH LD_LIBRARY_PATH=~/fsl/lib python scripts/qap_functional_spatial.py --sublist ~/bids_subject_list.yml configs/qap_config_ds003.yml
+    - FSLDIR=~/fsl/ PATH=~/afni:~/fsl/bin:$PATH LD_LIBRARY_PATH=~/fsl/lib python scripts/qap_functional_temporal.py --sublist ~/bids_subject_list.yml configs/qap_config_ds003.yml
 general:
   artifacts:
     - "/tmp/output"
