--- a/configs/qap_config_ds003.yml
+++ b/configs/qap_config_ds003.yml
@@ -8,9 +8,9 @@ working_directory: /tmp/workdir
 
 write_all_outputs: False
 
-template_brain_for_anat: ~/fsl/data/standard/MNI152_T1_2mm_brain.nii.gz
+template_brain_for_anat: /home/ubuntu/fsl/data/standard/MNI152_T1_2mm_brain.nii.gz
 
-template_skull_for_anat: ~/fsl/data/standard/MNI152_T1_2mm.nii.gz
+template_skull_for_anat: /home/ubuntu/fsl/data/standard/MNI152_T1_2mm.nii.gz
 
 start_idx: 0
 
