--- a/circle.yml
+++ b/circle.yml
@@ -29,6 +29,8 @@ general:
   artifacts:
     - "/tmp/output"
     - "/tmp/workdir"
+    - "/tmp/output_ms"
+    - "/tmp/workdir_ms"
     - "~/bids_anat_sub-01.yml"
     - "~/bids_func_sub-01.yml"
     - "~/bids_anat_list.yml"
