Updated template config files

--- a/configs/qap_config_abide_spatial.yml
+++ b/configs/qap_config_abide_spatial.yml
@@ -11,3 +11,5 @@ write_all_outputs: False
 template_brain_for_anat: /usr/share/fsl/5.0/data/standard/MNI152_T1_2mm_brain.nii.gz
 
 template_skull_for_anat: /usr/share/fsl/5.0/data/standard/MNI152_T1_2mm.nii.gz
+
+write_report: False
