--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ dependencies:
 #    - "~/fsl/"
   override:
     - gem install jekyll
-    - gem install redcloth
+    - gem install RedCloth
 #    - pip install --upgrade pip
 #    - pip install numpy
 #    - pip install -e .
