--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,7 @@ dependencies:
 #    - "~/examples/"
 #    - "~/afni/"
 #    - "~/fsl/"
-  override:
+  pre:
     - gem install jekyll -v 2.5.3
 #    - pip install --upgrade pip
 #    - pip install numpy
