--- a/circle.yml
+++ b/circle.yml
@@ -2,17 +2,17 @@
 #  ruby:
 #    version: 2.2.1
 
-#dependencies:
-#  cache_directories:
-#    - "~/examples/"
-#    - "~/afni/"
-#    - "~/fsl/"
+dependencies:
+  cache_directories:
+    - "~/examples/"
+    - "~/afni/"
+    - "~/fsl/"
 #  pre:
 #    - gem install jekyll -v 2.5.3
-# override:
-#    - pip install --upgrade pip
-#    - pip install numpy
-#    - pip install -e .
+ override:
+    - pip install --upgrade pip
+    - pip install numpy
+    - pip install -e .
 #    - if [[ ! -d ~/fsl ]]; then wget "http://fsl.fmrib.ox.ac.uk/fsldownloads/fsl-5.0.9-centos6_64.tar.gz"; tar zxvf fsl-5.0.9-centos6_64.tar.gz; mv fsl ~/fsl; fi
 #    - if [[ ! -d ~/afni ]]; then wget "http://afni.nimh.nih.gov/pub/dist/tgz/linux_openmp_64.tgz"; tar zxvf linux_openmp_64.tgz; mv linux_openmp_64 ~/afni; fi
 #    - if [[ ! -d ~/examples/ds003_downsampled ]]; then wget "https://googledrive.com/host/0B2JWN60ZLkgkMEw4bW5VUUpSdFU/ds003_downsampled.tar"; mkdir -p ~/examples; tar xvf ds003_downsampled.tar -C ~/examples; fi
