--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 machine:
   ruby:
-    version: 2.2.1
+    version: rbx-2.2.6
 
 dependencies:
   cache_directories:
@@ -8,7 +8,7 @@ dependencies:
     - "~/afni/"
     - "~/fsl/"
   pre:
-    - gem install jekyll -v 2.5.3
+    - gem install jekyll
   override:
     - pip install --upgrade pip
     - pip install numpy
