--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,7 @@ dependencies:
   pre:
     - gem install jekyll
     - gem install RedCloth
-    - gem install i18n 
+    - gem install i18n -v 0.6.9
   override:
     - pip install --upgrade pip
     - pip install numpy
