--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,7 @@ dependencies:
     - gem install jekyll
     - gem install RedCloth
     - gem install i18n -v 0.6.9
+    - gem install json -v 1.8.1
   override:
     - pip install --upgrade pip
     - pip install numpy
