--- a/circle.yml
+++ b/circle.yml
@@ -12,6 +12,7 @@ dependencies:
     - gem install RedCloth
     - gem install i18n -v 0.6.9
     - gem install json -v 1.8.1
+    - gem install minitest -v 5.3.4
   override:
     - pip install --upgrade pip
     - pip install numpy
