--- a/circle.yml
+++ b/circle.yml
@@ -13,6 +13,7 @@ dependencies:
     - gem install i18n -v 0.6.9
     - gem install json -v 1.8.1
     - gem install minitest -v 5.3.4
+    - gem install thread_safe -v 0.3.4
   override:
     - pip install --upgrade pip
     - pip install numpy
