--- a/circle.yml
+++ b/circle.yml
@@ -15,6 +15,7 @@ dependencies:
     - gem install minitest -v 5.3.4
     - gem install thread_safe -v 0.3.4
     - gem install tzinfo -v 1.2.1
+    - gem install activesupport -v 4.1.1
   override:
     - pip install --upgrade pip
     - pip install numpy
