--- a/circle.yml
+++ b/circle.yml
@@ -18,6 +18,7 @@ dependencies:
     - gem install activesupport -v 4.1.1
     - gem install blankslate -v 2.1.2.4
     - gem install fast-stemmer -v 1.0.2
+    - gem install classifier -v 1.3.4
   override:
     - pip install --upgrade pip
     - pip install numpy
