--- a/circle.yml
+++ b/circle.yml
@@ -19,6 +19,7 @@ dependencies:
     - gem install blankslate -v 2.1.2.4
     - gem install fast-stemmer -v 1.0.2
     - gem install classifier -v 1.3.4
+    - gem install highline -v 1.6.21
   override:
     - pip install --upgrade pip
     - pip install numpy
