--- a/circle.yml
+++ b/circle.yml
@@ -23,6 +23,7 @@ dependencies:
     - gem install commander -v 4.1.6
     - gem install ffi -v 1.9.3
     - gem install gemoji -v 1.5.0
+    - gem install liquid -v 2.5.5
   override:
     - pip install --upgrade pip
     - pip install numpy
