--- a/circle.yml
+++ b/circle.yml
@@ -25,6 +25,7 @@ dependencies:
     - gem install gemoji -v 1.5.0
     - gem install liquid -v 2.5.5
     - gem install rb-fsevent -v 0.9.4
+    - gem install rb-inotify -v 0.9.4
   override:
     - pip install --upgrade pip
     - pip install numpy
