--- a/circle.yml
+++ b/circle.yml
@@ -27,6 +27,7 @@ dependencies:
     - gem install rb-fsevent -v 0.9.4
     - gem install rb-inotify -v 0.9.4
     - gem install rb-kqueue -v 0.2.3
+    - gem install listen -v 1.3.1
   override:
     - pip install --upgrade pip
     - pip install numpy
