--- a/circle.yml
+++ b/circle.yml
@@ -28,6 +28,7 @@ dependencies:
     - gem install rb-inotify -v 0.9.4
     - gem install rb-kqueue -v 0.2.3
     - gem install listen -v 1.3.1
+    - gem install maruku -v 0.7.0
   override:
     - pip install --upgrade pip
     - pip install numpy
