--- a/circle.yml
+++ b/circle.yml
@@ -29,6 +29,7 @@ dependencies:
     - gem install rb-kqueue -v 0.2.3
     - gem install listen -v 1.3.1
     - gem install maruku -v 0.7.0
+    - gem install posix-spawn -v 0.3.8
   override:
     - pip install --upgrade pip
     - pip install numpy
