--- a/circle.yml
+++ b/circle.yml
@@ -30,6 +30,7 @@ dependencies:
     - gem install listen -v 1.3.1
     - gem install maruku -v 0.7.0
     - gem install posix-spawn -v 0.3.8
+    - gem install yajl-ruby -v 1.1.0
   override:
     - pip install --upgrade pip
     - pip install numpy
