Updated the requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,10 @@ matplotlib>=1.5.1
 networkx>=1.11
 nibabel>=2.0.2
 nitime>=0.6
+nipype>=0.12.0-rc2
 nose>=1.3.7
 numpy>=1.11.0
 pandas>=0.18.1
-pillow>=3.2.0
 prov>=1.4.0
 pyparsing>=2.1.4
 python-dateutil>=2.5.3
