removed the template_skull_for_anat variable and all of its uses, also removed the standard parameter from slice_head_mask as it was not used

--- a/configs/container_config_spatial.yml
+++ b/configs/container_config_spatial.yml
@@ -2,9 +2,9 @@ num_cores_per_subject: 1
 
 num_subjects_at_once: 1
 
-output_directory: /mnt/output
+output_directory: /home/test/out/output
 
-working_directory: /mnt/working
+working_directory: /mnt/test/out/working
 
 write_all_outputs: False
 
