--- a/configs/qap_config_TEMPLATE.yml
+++ b/configs/qap_config_TEMPLATE.yml
@@ -1,5 +1,11 @@
+# how many processors you wish to use in the run
+num_processors: 1
+
 # how many participants to run per workflow
 num_subjects_per_bundle: 1
+
+# the amount of memory (in GB) to allocate to the run
+memory_allocated: 2
 
 # which resource manager being used, if any
 resource_manager: None
