Updated the REQUIRES field in setup(), changed the template parameter name to "template_head_for_anat", and updated the QAP metric descriptions in the PDF reports.

--- a/configs/container_config_spatial.yml
+++ b/configs/container_config_spatial.yml
@@ -10,7 +10,7 @@ write_all_outputs: False
 
 template_brain_for_anat: /opt/afni/bin/MNI_avg152T1+tlrc.HEAD
 
-template_skull_for_anat: /opt/afni/bin/MNI_avg152T1+tlrc.HEAD
+template_head_for_anat: /opt/afni/bin/MNI_avg152T1+tlrc.HEAD
 
 write_report: False
 
