--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+numpy>=1.11.0
 INDI-Tools>=0.0.6
 Pillow>=3.2.0
 PyPDF2>=1.26.0
@@ -5,6 +6,7 @@ PyYAML>=3.11
 argparse>=1.2.1
 boto3>=1.3.1
 botocore>=1.4.22
+configparser>=3.5.0
 cycler>=0.10.0
 decorator>=4.0.9
 docutils>=0.12
@@ -17,9 +19,8 @@ matplotlib>=1.5.1
 networkx>=1.11
 nibabel>=2.0.2
 nitime>=0.6
-nipype>=0.12.0-rc2
+nipype>=0.12.1
 nose>=1.3.7
-numpy>=1.11.0
 pandas>=0.18.1
 prov>=1.4.0
 pyparsing>=2.1.4
