--- a/configs/qap_config_TEMPLATE.yml
+++ b/configs/qap_config_TEMPLATE.yml
@@ -5,10 +5,10 @@ pipeline_name: qap_run
 num_processors: 1
 
 # how many participants to run per workflow
-num_subjects_per_bundle: 1
+num_participants_at_once: 1
 
-# the amount of memory (in GB) to allocate to the run
-memory_allocated: 2
+# the amount of memory (in GB) to allocate to each participant
+memory_allocated_per_participant: 2
 
 # which resource manager being used, if any
 resource_manager: None
