--- a/configs/qap_config_ds003.yml
+++ b/configs/qap_config_ds003.yml
@@ -5,7 +5,7 @@ pipeline_name: qap_circleci
 num_processors: 1
 
 # how many participants to run per workflow
-num_participants_at_once: 1
+num_sessions_at_once: 1
 
 # the amount of memory (in GB) to allocate to each participant
 memory_allocated_per_participant: 2
