--- a/configs/qap_config_ds003_ms.yml
+++ b/configs/qap_config_ds003_ms.yml
@@ -4,17 +4,17 @@ pipeline_name: qap_circleci_ms
 # how many processors you wish to use in the run
 num_processors: 2
 
-# how many participants to run per workflow
+# how many sessions to run per workflow
 num_sessions_at_once: 2
 
-# the amount of memory (in GB) to allocate to each participant
-memory_allocated_per_participant: 2
+# the amount of memory (in GB) to allocate to the entire run
+available_memory: 4
 
-# which resource manager being used, if any
-resource_manager: None
+# which cluster system being used, if any
+cluster_system: None
 
 # where to place output files
-output_directory: /
+output_directory: /tmp/output
 
 # where to place Nipype workflow working files
 working_directory: /tmp/workdir_ms
