--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,13 @@
+sudo: false
+cache: pip
+language: python
+python:
+- '2.7'
+- '3.6'
+
+install:
+    - pip install --user sphinx travis-sphinx
+
 script:
     - travis-sphinx build
     
