--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 - '3.6'
 
 install:
-    - pip install --user sphinx travis-sphinx
+    - pip install sphinx travis-sphinx
 
 script:
     - travis-sphinx build
